k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fcc-bizfin-logo-designer-api
  namespace: fcc-bizfin-logo-designer
  labels:
    app: fcc-bizfin-logo-designer-api
    component: backend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3001
    targetPort: http
    protocol: TCP
  selector:
    app: fcc-bizfin-logo-designer-api
