k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fcc-bizfin-logo-designer-web
  namespace: fcc-bizfin-logo-designer
  labels:
    app: fcc-bizfin-logo-designer-web
    component: frontend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: fcc-bizfin-logo-designer-web
